# caos-seminars

seminar-01/: README.md  macros_clever.c  macros_dummy.c  main.c  minmax.c  minmax.h  minmax_fixed.c  py_utils.c  py_utils.cpp
seminar-02/: README.md  tasks.md
seminar-03/: README.md
seminar-04/: README.md
seminar-05/: README.md
seminar-05/02-hello-world/: Makefile  main.s
seminar-05/03-hello-arichmetic/: Makefile  main.s
seminar-05/04-hello-username/: main.s
seminar-05/05-simple-summator/: Makefile  main.s
seminar-05/06-global-vars/: calculate.s
seminar-06/: README.md
seminar-06/00-syntaxes/: Makefile  sum.c
seminar-06/01-clamp/: Makefile  clamp.c  clamp_comp.S  clamp_cond_mov.S  clamp_jump.S  test.c  test_with_inline_asm.c
seminar-06/02-adressing/: Makefile  sum.S  test.c
seminar-06/03-function-call/: Makefile  hello.S  hello.c  main.c
seminar-07/: README.md  asm_filter_useless
seminar-07/00-fpu-basics/: Makefile  asm_exp.S  exp.c  main.c  math.c
seminar-07/01-sse-scalar/: Makefile  math.c
seminar-08/: README.md
seminar-09/: README.md
seminar-10/: README.md
seminar-11/: README.md
seminar-12/: README.md
seminar-13/: README.md
seminar-14/: README.md
seminar-16/: README.md
seminar-17/: README.md
seminar-19/: README.md
seminar-20/: README.md
seminar-21/: README.md
seminar-24/: README.md
seminar-25/: README.md
seminar-25/examples/02-openssl-one-block/: CMakeLists.txt  main.c
seminar-26/: README.md
seminar-27/: README.md
seminar-27/examples/00-fuse/: CMakeLists.txt  main.c
seminar-28/: README.md
(+194 files in other folders)
